addition in schedule table

--- a/home.html
+++ b/home.html
@@ -570,7 +570,7 @@
                       </tr>
                     </thead>
                     <tbody>
-                      <tr>
+                      <tr class="table-success">
                         <td>T10</td>
                         <td>E</td>
                         <td>Sunday</td>
@@ -591,7 +591,7 @@
                               </div>
                         </td>
                       </tr>
-                      <tr>
+                      <tr class="table-success">
                         <td>T10</td>
                         <td>E</td>
                         <td>Sunday</td>
@@ -612,7 +612,7 @@
                               </div>
                         </td>
                       </tr>
-                      <tr>
+                      <tr class="table-success">
                         <td>T10</td>
                         <td>E</td>
                         <td>Sunday</td>
@@ -634,6 +634,93 @@
                         </td>
                       </tr>
 
+                      <tr class="table-primary">
+                        <td>T10</td>
+                        <td>E</td>
+                        <td>Sunday</td>
+                        <td>23.05.2021</td>
+                        <td>14:00 - 15:30</td>
+                        <td>TUC vs EMP</td>
+                        <td>TCG, Vantaa</td>
+                        <td>
+                            <p>
+                                <a class="btn btn-primary" data-toggle="collapse" href="#collapseRow4" role="button" aria-expanded="false" aria-controls="collapseRow4">
+                                  Selected Team
+                                </a>
+                              </p>
+                              <div class="collapse" id="collapseRow4">
+                                <div class="card card-body">
+                                  Not announced yet!
+                                </div>
+                              </div>
+                        </td>
+                      </tr>
+
+                      <tr class="table-primary">
+                        <td>T10</td>
+                        <td>E</td>
+                        <td>Sunday</td>
+                        <td>23.05.2021</td>
+                        <td>16:00 - 17:30</td>
+                        <td>TUC vs BEN</td>
+                        <td>TCG, Vantaa</td>
+                        <td>
+                            <p>
+                                <a class="btn btn-primary" data-toggle="collapse" href="#collapseRow5" role="button" aria-expanded="false" aria-controls="collapseRow5">
+                                  Selected Team
+                                </a>
+                              </p>
+                              <div class="collapse" id="collapseRow5">
+                                <div class="card card-body">
+                                  Not announced yet!
+                                </div>
+                              </div>
+                        </td>
+                      </tr>
+
+                      <tr class="table-warning">
+                        <td>T10</td>
+                        <td>E</td>
+                        <td>Sunday</td>
+                        <td>30.05.2021</td>
+                        <td>14:00 - 15:30</td>
+                        <td>TUC vs GYM</td>
+                        <td>TCG, Vantaa</td>
+                        <td>
+                            <p>
+                                <a class="btn btn-primary" data-toggle="collapse" href="#collapseRow6" role="button" aria-expanded="false" aria-controls="collapseRow6">
+                                  Selected Team
+                                </a>
+                              </p>
+                              <div class="collapse" id="collapseRow6">
+                                <div class="card card-body">
+                                  Not announced yet!
+                                </div>
+                              </div>
+                        </td>
+                      </tr>
+
+                      <tr class="table-warning">
+                        <td>T10</td>
+                        <td>E</td>
+                        <td>Sunday</td>
+                        <td>30.05.2021</td>
+                        <td>16:00 - 17:30</td>
+                        <td>TUC vs OKK</td>
+                        <td>TCG, Vantaa</td>
+                        <td>
+                            <p>
+                                <a class="btn btn-primary" data-toggle="collapse" href="#collapseRow7" role="button" aria-expanded="false" aria-controls="collapseRow7">
+                                  Selected Team
+                                </a>
+                              </p>
+                              <div class="collapse" id="collapseRow7">
+                                <div class="card card-body">
+                                  Not announced yet!
+                                </div>
+                              </div>
+                        </td>
+                      </tr>
                     </tbody>
                   </table>
             </div>
