--- a/home.html
+++ b/home.html
@@ -112,14 +112,14 @@
                         <div class="single-slider slider-bg-1 text-center">
                             <div class="slider-inner">
                                 <h1 style="color: black;">WELCOME TO BE PART OF TEAM</h1>
-                                ><h5>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa cum sociic</h5>
+                                ><h5>New members are always welcome to become part of our club</h5>
                                 <!-- <a class="btn get-started-btn" href="#">Get Started</a> -->
                             </div>
                         </div>
                         <div class="single-slider slider-bg-2 text-center">
                             <div class="slider-inner">
                                 <h1 style="color: black;">WE ARE UNITED</h1>
-								<h5>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis n</h5
+								<h5>Contact us and try few practice sessions for free! </h5
 >                                
 <!-- <a class="btn get-started-btn" href="#">Get Started</a> -->
                             </div>
@@ -127,7 +127,6 @@
                         <div class="single-slider slider-bg-3 text-center">
                             <div class="slider-inner">
                                 <h1 style="color: black;">ONE OF THE OLDEST CLUB IN FINLAND</h1>
-								<h5>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis n</h5>
                                 <!-- <a class="btn get-started-btn" href="#">Get Started</a> -->
                             </div>
                         </div>
@@ -143,7 +142,7 @@
             <div class="row">
                 <div class="col-lg-7 col-md-9 col-12">
                     <div class="hire-us-content">
-                        <h6>The club was established <span>15</span> years ago!</h6> 
+                        <h6>The club was established <span>38</span> years ago!</h6> 
                     </div>  
                 </div>
                 <!-- <div class="col-lg-3 col-md-3  offset-lg-2 col-12 text-right">
@@ -205,71 +204,17 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-4 col-md-6">
-                    <div class="single-bemax-item d-flex">
-                        <div class="item-icon">
-                           <a href="#"> <i class="fas fa-star"></i></a>
-                        </div>
-                        <div class="item-content">
-                            <h6><a href="#">Something</a></h6>
-                            <p>Vestibulum non diam quis nisl dignissim posuere a vulputate urna nunc velit</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6">
-                    <div class="single-bemax-item d-flex">
-                        <div class="item-icon">
-                            <a href="#"><i class="fas fa-star"></i></a>
-                        </div>
-                        <div class="item-content">
-                            <h6><a href="#">Something</a></h6>
-                            <p>Vestibulum non diam quis nisl dignissim posuere a vulputate urna nunc velit</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6">
-                    <div class="single-bemax-item d-flex">
-                        <div class="item-icon">
-                            <a href="#"><i class="fas fa-star"></i></a>
-                        </div>
-                        <div class="item-content">
-                            <h6><a href="#">Something</a></h6>
-                            <p>Vestibulum non diam quis nisl dignissim posuere a vulputate urna nunc velit</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6">
-                    <div class="single-bemax-item d-flex">
-                        <div class="item-icon">
-                            <a href="#"><i class="fas fa-star"></i></a>
-                        </div>
-                        <div class="item-content">
-                            <h6><a href="#">Something</a></h6>
-                            <p>Vestibulum non diam quis nisl dignissim posuere a vulputate urna nunc velit</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6">
-                    <div class="single-bemax-item d-flex">
-                        <div class="item-icon">
-                            <a href="#"><i class="fas fa-star"></i></a>
-                        </div>
-                        <div class="item-content">
-                            <h6><a href="#">Something</a></h6>
-                            <p>Vestibulum non diam quis nisl dignissim posuere a vulputate urna nunc velit</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6">
-                    <div class="single-bemax-item d-flex">
-                        <div class="item-icon">
-                            <a href="#"><i class="fas fa-star"></i></a>
-                        </div>
-                        <div class="item-content">
-                            <h6><a href="#">Something</a></h6>
-                            <p>Vestibulum non diam quis nisl dignissim posuere a vulputate urna nunc velit</p>
-                        </div>
-                    </div>
+                <div class="col-lg-12 text-center mb-70" style="text-align: justify !important;">
+                    <p>
+                        The seeds of Turku cricket were planted in 1993 when club founder, Tim Glogan, contacted Sayid Ayub of Helsinki Cricket Club to arrange a match. At that time, the only other clubs in Finland were Helsinki and Lahti. Although 1994 saw the demise of Lahti, two other clubs, Stadi (SKK) and Vantaa, sprang into existence. 
+                        In 1995, playing away to Helsinki, Turku were a player short. A gentleman named Andy Armitage happened to be around that day and filled in for Turku. The latter opportunity, giving Mr Armitage a taste for Finnish cricket, has since stood the Finnish Cricket Association in good stead. 
+                        The official Finnish league was set up by Andy Armitage in 1999. Based on four founding teams, Helsinki, Turku, Stadi and Vantaa, this provided each club with at least six games a year (home and away). 
+                        Turku cricket had started on the grass football pitch at Runosmäki.  However, even with a mat, it was difficult to get a good bounce from the wicket. Therefore, in the early 2000s, Turku Cricket Club (TCC) moved its base to Pansio, a large sand field that gave long boundaries all around. 
+                        At the same time, other clubs began springing up to complement the existing four, including Espoo, Empire and Tampere, with the number of clubs having continued to increase ever since.
+                        Cricketing interest in Turku grew and whilst the league remained small, there were insufficient regular playing opportunities and team places for all the club members. This, amongst other things, lead to the formation of a second Turku club, FinnAsia (est. 2005).
+                        Both Turku clubs continued in the Finnish leagues with mixed success. Highlights include TCC winning the “T40” league in 2006. Other examples?
+                        By 2015, the Finnish Cricket Association had grown substantially,and with several divisions and competitions a merger provided an excellent opportunity to make optimal use of local resources and talent. Subsequently, Turku Cricket Club and FinnAsia became Turku United, the name reflecting the harmonious union of the two clubs. Today the Turku United ground is in the centre of Turku at Kupittaa park, suitably sized and well located.
+                    </p>
                 </div>
             </div>
         </div>
@@ -368,28 +313,35 @@
             <div class="row">
                 <div class="col-lg-12 text-center mb-70">
                     <div class="section-title">
-                        <h4>Why Choose Us</h4>
+                        <h4>Why Join Us</h4>
                     </div>
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-6">
-                    <div class="video-img-thumbnail text-center">
-                        <a class="video-play" href="https://www.youtube.com/watch?v=9BGf4DIBcFY"><i class="far fa-play-circle"></i></a>
-                    </div>
-                </div>
-                <div class="col-lg-6">
+                <div class="col-lg-12">
                     <div class="single-choose-item">
-                        <h6><a href="#"><i class="fas fa-star"></i> Something</a></h6>
-                        <p>Morbi vehicula a nibh in commodo. Aliquam quis dolor eget lectus pulvinar malesuada. Suspendisse eu rhoncus ligula.</p>
-                    </div>
-                    <div class="single-choose-item">
-                        <h6><a href="#"><i class="fas fa-star"></i> Something </a></h6>
-                        <p>Nam orci metus, varius at nisl at, tempor facilisis magna. Ut maximus felis et tincidunt lacinia. Nulla malesuada ipsum at magna condimentum pharetra.</p>
+                        <h6><a href="#"><i class="fas fa-star"></i> Get rid of pandemic state</a></h6>
+                        <p style="text-align: justify;">
+                            Many of us move away from home to start university whether it be across the state, from interstate or overseas. 
+                            Even if we haven’t moved most of us sit alone in the first couple of lectures wondering how we are going to meet new people and make friends. 
+                            Joining a sporting club is a great solution – you will be seeing likeminded people on a regular basis. 
+                            It’s an opportunity to expand your social network and form bonds that can last a lifetime.
+                        </p>
                     </div>
                     <div class="single-choose-item">
-                        <h6><a href="#"><i class="fas fa-star"></i> Something</a></h6>
-                        <p>Fusce viverra risus diam, in luctus nulla porta vel. Etiam nunc lorem, dapibus id augue vitae, lacinia pharetra eros. Fusce ac egestas purus, non porta est.</p>
+                        <h6><a href="#"><i class="fas fa-star"></i> Be social and make connections </a></h6>
+                        <p style="text-align: justify;">
+                            Another reason to join the sports club or specifically TUCC is to meet not only cricket players rather the professionals from different practical domains and fields.
+                            All the players who are part of TUCC are highly educated and are well established in their professions. Joining us will not only give an opportunity to play cricket games rather it will provide an opportunity to talk with nice friends.
+                            TUCC players travel to different cities of Finland to play the matches in Cricket season and hence it brings an excellent opportunity for players to relieve stress and play the games with fun.
+                        </p>
+                    </div>
+                    <div class="single-choose-item">
+                        <h6><a href="#"><i class="fas fa-star"></i> Not very expensive to join</a></h6>
+                        <p style="text-align: justify;">
+                            TUCC has designed very flexible membership fee structure which is not only attractive & affordable for new members, but also good for existing members.
+                            There are different plans for the playing members which can be found in relevant section. 
+                        </p>
                     </div>
                 </div>
             </div>
@@ -721,6 +673,72 @@
                               </div>
                         </td>
                       </tr>
+
+                      <tr>
+                        <td>T20</td>
+                        <td>E</td>
+                        <td>Friday</td>
+                        <td>04.06.2021</td>
+                        <td>18:00 - 21:00</td>
+                        <td>TUC vs GGL</td>
+                        <td>KNCG</td>
+                        <td>
+                            <p>
+                                <a class="btn btn-primary" data-toggle="collapse" href="#collapseRow8" role="button" aria-expanded="false" aria-controls="collapseRow8">
+                                  Selected Team
+                                </a>
+                              </p>
+                              <div class="collapse" id="collapseRow8">
+                                <div class="card card-body">
+                                  Not announced yet!
+                                </div>
+                              </div>
+                        </td>
+                      </tr>
+
+                      <tr class="table-danger">
+                        <td>T20</td>
+                        <td>E</td>
+                        <td>Sunday</td>
+                        <td>06.06.2021</td>
+                        <td>10:30 - 13:30</td>
+                        <td>TUC vs EMP</td>
+                        <td>KNCG</td>
+                        <td>
+                            <p>
+                                <a class="btn btn-primary" data-toggle="collapse" href="#collapseRow9" role="button" aria-expanded="false" aria-controls="collapseRow9">
+                                  Selected Team
+                                </a>
+                              </p>
+                              <div class="collapse" id="collapseRow9">
+                                <div class="card card-body">
+                                  Not announced yet!
+                                </div>
+                              </div>
+                        </td>
+                      </tr>
+
+                      <tr class="table-danger">
+                        <td>T20</td>
+                        <td>E</td>
+                        <td>Sunday</td>
+                        <td>06.06.2021</td>
+                        <td>14:30 - 17:30</td>
+                        <td>TUC vs SKK</td>
+                        <td>KNCG</td>
+                        <td>
+                            <p>
+                                <a class="btn btn-primary" data-toggle="collapse" href="#collapseRow10" role="button" aria-expanded="false" aria-controls="collapseRow10">
+                                  Selected Team
+                                </a>
+                              </p>
+                              <div class="collapse" id="collapseRow10">
+                                <div class="card card-body">
+                                  Not announced yet!
+                                </div>
+                              </div>
+                        </td>
+                      </tr>
                     </tbody>
                   </table>
             </div>
@@ -780,8 +798,7 @@
                         <ul class="social-links">
                             <li><a href="https://www.facebook.com/groups/744506562382614" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
                             <li><a href="#" target="_blank"><i class="fab fa-twitter"></i></a></li>
-                            <li><a href="#" target="_blank"><i class="fab fa-google-plus-g"></i></a></li>
-                            <li><a href="#" target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
+                            <li><a href="#" target="_blank"><i class="fab fa-instagram"></i></a></li>
                         </ul>
                     </div>
                 </div>
