--- a/home.html
+++ b/home.html
@@ -583,7 +583,7 @@
                         </td>
                       </tr>
 
-                      <tr class="table-danger">
+                      <tr class="table-info">
                         <td>T20</td>
                         <td>E</td>
                         <td>Sunday</td>
@@ -605,7 +605,7 @@
                         </td>
                       </tr>
 
-                      <tr class="table-danger">
+                      <tr class="table-info">
                         <td>T20</td>
                         <td>E</td>
                         <td>Sunday</td>
