--- a/home.html
+++ b/home.html
@@ -76,9 +76,9 @@
             <div class="header-wrapper">
                 <div class="row">
                     <div class="col-lg-3 col-6">
-                        <div class="site-logo">
-							<h2>Turku United Cricket Club</h2>
-                            <a data-toggle="tooltip" title="Be-one" href="index.html"></a>
+                        <div class="main-menu">
+							<h4>Turku United<img src="./assets//img/logo.png" style="width: 70px;" /></h4>
+                            
                         </div>
                     </div>
                     <div class="col-6 d-lg-none static text-right">
@@ -93,8 +93,6 @@
                                 <li><a href="#page">Reason to join</a></li>
                                 <li><a href="#schedule">Schedule</a></li>
                                 <li><a href="#contact-us">Contact Us</a></li>
-                                <li class="search-trigger d-none d-lg-inline-block"><a href="javascript:void(0)"><i class="fas fa-search"></i></a>
-                                </li>
                             </ul>
                         </nav>
                     </div>
@@ -236,24 +234,22 @@
     <!-- Start Latest Project Area -->
     <div class="latest-project-area black-bg pt-70 pb-70" id="portfolio">
         <div class="container">
+            <div class="col-sm-12 col-md-12 col-lg-12">
             <div class="row">
-                <div class="col-lg-12 text-center mb-70">
+                <div class="col-lg-12 col-md-12 col-lg-12 text-center mb-70">
                     <div class="section-title">
                         <h4>Fee Chart</h4>
                     </div>
                 </div>
             </div>
             <div class="row">
-                <div class="col-sm-12 col-md-12 col-lg-12">
+
                     <table class="table table-hover table-bordered" style="color: white;">
                         <thead>
                           <tr>
                             <th scope="col">#</th>
                             <th scope="col">Member Type</th>
                             <th scope="col">Membership Fee</th>
-                            <th scope="col">Shirt Price</th>
-                            <th scope="col">Trouser Price</th>
-                            <th scope="col">Jersey Price</th>
                             <th scope="col">Game fee (T20)</th>
                             <th scope="col">Game fee (T10)</th>
                           </tr>
@@ -263,9 +259,6 @@
                             <td>1</td>
                             <td>Full Member</td>
                             <td>145 Euros</td>
-                            <td>-</td>
-                            <td>-</td>
-                            <td>-</td>
                             <td>-</td>
                             <td>-</td>
                           </tr>    
