View Result buttons

--- a/home.html
+++ b/home.html
@@ -372,14 +372,14 @@
                         <td>
                             <p>
                                 <a class="btn btn-primary" data-toggle="collapse" href="#collapseRow1" role="button" aria-expanded="false" aria-controls="collapseRow1">
-                                  Selected Team
+                                  View Result
                                 </a>
-                              </p>
-                              <div class="collapse" id="collapseRow1">
+                            </p>
+                              <!-- <div class="collapse" id="collapseRow1">
                                 <div class="card card-body">
                                   Not announced yet!
                                 </div>
-                              </div>
+                              </div> -->
                         </td>
                       </tr>
                       <tr class="table-success">
@@ -393,14 +393,14 @@
                         <td>
                             <p>
                                 <a class="btn btn-primary" data-toggle="collapse" href="#collapseRow2" role="button" aria-expanded="false" aria-controls="collapseRow2">
-                                  Selected Team
+                                  View Result
                                 </a>
                               </p>
-                              <div class="collapse" id="collapseRow2">
+                              <!-- <div class="collapse" id="collapseRow2">
                                 <div class="card card-body">
                                   Not announced yet!
                                 </div>
-                              </div>
+                              </div> -->
                         </td>
                       </tr>
                       <tr class="table-success">
@@ -414,14 +414,14 @@
                         <td>
                             <p>
                                 <a class="btn btn-primary" data-toggle="collapse" href="#collapseRow3" role="button" aria-expanded="false" aria-controls="collapseRow3">
-                                  Selected Team
+                                  View Result
                                 </a>
                               </p>
-                              <div class="collapse" id="collapseRow3">
+                              <!-- <div class="collapse" id="collapseRow3">
                                 <div class="card card-body">
                                   Not announced yet!
                                 </div>
-                              </div>
+                              </div> -->
                         </td>
                       </tr>
 
@@ -436,14 +436,14 @@
                         <td>
                             <p>
                                 <a class="btn btn-primary" data-toggle="collapse" href="#collapseRow4" role="button" aria-expanded="false" aria-controls="collapseRow4">
-                                  Selected Team
+                                  View Result
                                 </a>
                               </p>
-                              <div class="collapse" id="collapseRow4">
+                              <!-- <div class="collapse" id="collapseRow4">
                                 <div class="card card-body">
                                   Not announced yet!
                                 </div>
-                              </div>
+                              </div> -->
                         </td>
                       </tr>
 
@@ -458,14 +458,14 @@
                         <td>
                             <p>
                                 <a class="btn btn-primary" data-toggle="collapse" href="#collapseRow5" role="button" aria-expanded="false" aria-controls="collapseRow5">
-                                  Selected Team
+                                  View Result
                                 </a>
                               </p>
-                              <div class="collapse" id="collapseRow5">
+                              <!-- <div class="collapse" id="collapseRow5">
                                 <div class="card card-body">
                                   Not announced yet!
                                 </div>
-                              </div>
+                              </div> -->
                         </td>
                       </tr>
 
@@ -480,14 +480,14 @@
                         <td>
                             <p>
                                 <a class="btn btn-primary" data-toggle="collapse" href="#collapseRow6" role="button" aria-expanded="false" aria-controls="collapseRow6">
-                                  Selected Team
+                                  View Result
                                 </a>
                               </p>
-                              <div class="collapse" id="collapseRow6">
+                              <!-- <div class="collapse" id="collapseRow6">
                                 <div class="card card-body">
                                   Not announced yet!
                                 </div>
-                              </div>
+                              </div> -->
                         </td>
                       </tr>
 
@@ -502,14 +502,14 @@
                         <td>
                             <p>
                                 <a class="btn btn-primary" data-toggle="collapse" href="#collapseRow7" role="button" aria-expanded="false" aria-controls="collapseRow7">
-                                  Selected Team
+                                  View Result
                                 </a>
                               </p>
-                              <div class="collapse" id="collapseRow7">
+                              <!-- <div class="collapse" id="collapseRow7">
                                 <div class="card card-body">
                                   Not announced yet!
                                 </div>
-                              </div>
+                              </div> -->
                         </td>
                       </tr>
 
@@ -524,14 +524,14 @@
                         <td>
                             <p>
                                 <a class="btn btn-primary" data-toggle="collapse" href="#collapseRow8" role="button" aria-expanded="false" aria-controls="collapseRow8">
-                                  Selected Team
+                                  View Result
                                 </a>
                               </p>
-                              <div class="collapse" id="collapseRow8">
+                              <!-- <div class="collapse" id="collapseRow8">
                                 <div class="card card-body">
                                   Not announced yet!
                                 </div>
-                              </div>
+                              </div> -->
                         </td>
                       </tr>
 
@@ -546,14 +546,14 @@
                         <td>
                             <p>
                                 <a class="btn btn-primary" data-toggle="collapse" href="#collapseRow9" role="button" aria-expanded="false" aria-controls="collapseRow9">
-                                  Selected Team
+                                  View Result
                                 </a>
                               </p>
-                              <div class="collapse" id="collapseRow9">
+                              <!-- <div class="collapse" id="collapseRow9">
                                 <div class="card card-body">
                                   Not announced yet!
                                 </div>
-                              </div>
+                              </div> -->
                         </td>
                       </tr>
 
@@ -568,14 +568,14 @@
                         <td>
                             <p>
                                 <a class="btn btn-primary" data-toggle="collapse" href="#collapseRow10" role="button" aria-expanded="false" aria-controls="collapseRow10">
-                                  Selected Team
+                                  View Result
                                 </a>
                               </p>
-                              <div class="collapse" id="collapseRow10">
+                              <!-- <div class="collapse" id="collapseRow10">
                                 <div class="card card-body">
                                   Not announced yet!
                                 </div>
-                              </div>
+                              </div> -->
                         </td>
                       </tr>
 
@@ -590,16 +590,16 @@
                         <td>
                             <p>
                                 <a class="btn btn-primary" data-toggle="collapse" href="#collapseRow11" role="button" aria-expanded="false" aria-controls="collapseRow11">
-                                  Selected Team
+                                  View Result
                                 </a>
                               </p>
-                              <div class="collapse" id="collapseRow11">
+                              <!-- <div class="collapse" id="collapseRow11">
                                 <div class="card card-body">
                                   Not announced yet!
                                 </div>
-                              </div>
+                              </div> -->
                         </td>
-                        <p>I am at row level</p>
+                        <!-- <p>I am at row level</p> -->
                       </tr>
 
                       <tr class="table-info">
@@ -613,14 +613,14 @@
                         <td>
                             <p>
                                 <a class="btn btn-primary" data-toggle="collapse" href="#collapseRow12" role="button" aria-expanded="false" aria-controls="collapseRow12">
-                                  Selected Team
+                                  View Result
                                 </a>
                               </p>
-                              <div class="collapse" id="collapseRow12">
+                              <!-- <div class="collapse" id="collapseRow12">
                                 <div class="card card-body">
                                   Not announced yet!
                                 </div>
-                              </div>
+                              </div> -->
                         </td>
                       </tr>
                     </tbody>
