--- a/home.html
+++ b/home.html
@@ -371,7 +371,12 @@
                         <td>Kupittaa, Turku</td>
                         <td>
                             <p>
-                                <a class="btn btn-primary" data-toggle="collapse" href="#collapseRow1" role="button" aria-expanded="false" aria-controls="collapseRow1">
+                                <a class="btn btn-primary" 
+                                data-toggle="collapse" 
+                                href="https://www.crichq.com/matches/925680/1st_innings" 
+                                role="button" aria-expanded="false" 
+                                target="_blank"
+                                aria-controls="collapseRow1">
                                   View Result
                                 </a>
                             </p>
@@ -392,7 +397,11 @@
                         <td>Kupittaa, Turku</td>
                         <td>
                             <p>
-                                <a class="btn btn-primary" data-toggle="collapse" href="#collapseRow2" role="button" aria-expanded="false" aria-controls="collapseRow2">
+                                <a class="btn btn-primary" 
+                                data-toggle="collapse" 
+                                href="https://www.crichq.com/matches/925710/1st_innings"
+                                target="_blank" 
+                                role="button" aria-expanded="false" aria-controls="collapseRow2">
                                   View Result
                                 </a>
                               </p>
@@ -413,7 +422,11 @@
                         <td>Kupittaa, Turku</td>
                         <td>
                             <p>
-                                <a class="btn btn-primary" data-toggle="collapse" href="#collapseRow3" role="button" aria-expanded="false" aria-controls="collapseRow3">
+                                <a class="btn btn-primary" 
+                                data-toggle="collapse" 
+                                href="https://www.crichq.com/matches/925745/1st_innings"
+                                target="_blank" 
+                                role="button" aria-expanded="false" aria-controls="collapseRow3">
                                   View Result
                                 </a>
                               </p>
