View Result logic updated

--- a/home.html
+++ b/home.html
@@ -371,12 +371,10 @@
                         <td>Kupittaa, Turku</td>
                         <td>
                             <p>
-                                <a class="btn btn-primary" 
-                                data-toggle="collapse" 
+                                <a class="btn btn-primary"  
                                 href="https://www.crichq.com/matches/925680/1st_innings" 
                                 role="button" aria-expanded="false" 
-                                target="_blank"
-                                aria-controls="collapseRow1">
+                                target="_blank">
                                   View Result
                                 </a>
                             </p>
@@ -398,10 +396,9 @@
                         <td>
                             <p>
                                 <a class="btn btn-primary" 
-                                data-toggle="collapse" 
                                 href="https://www.crichq.com/matches/925710/1st_innings"
                                 target="_blank" 
-                                role="button" aria-expanded="false" aria-controls="collapseRow2">
+                                role="button" aria-expanded="false">
                                   View Result
                                 </a>
                               </p>
@@ -423,10 +420,9 @@
                         <td>
                             <p>
                                 <a class="btn btn-primary" 
-                                data-toggle="collapse" 
                                 href="https://www.crichq.com/matches/925745/1st_innings"
                                 target="_blank" 
-                                role="button" aria-expanded="false" aria-controls="collapseRow3">
+                                role="button" aria-expanded="false">
                                   View Result
                                 </a>
                               </p>
