--- a/home.html
+++ b/home.html
@@ -269,7 +269,12 @@
                     <p style="color: white;">
                         <b>TUCC Account: </b> FI96 1590 3000 1690 76 (Nordea)
                     </p>
-                    <p style="color: white;"><b>Note: </b>Please use your personal reference number while paying the fee. Otherwise the generic reference number is: 5678</p>
+                    <p style="color: white;">
+                        <b>Note: </b>
+                        Please use your personal reference number while paying the fee. Otherwise the generic reference number is: 5678
+                        <br />
+                        We also accept payment through <b>Smartum Voucers</b> and <b>e-passi</b>.
+                    </p>
                 </div>
                 <p style="color: white;"> Buy Suomisports license from this link: <a style="color: lightsteelblue;" href="https://info.suomisport.fi/en/?fbclid=IwAR1E5IijJpOblpEodEzbFkLwbnxpIOgM6xXZuMEW4Ra4_eXz-o-myb7avtk" target="_blank">click here</a></p>
             </div>
